fixed problem where top menu last item was not working because it was too close to a <h1>

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ h1{
   font-family: "MODENINE";
   left: 0;
   line-height: 200px;
-  margin-top: -200px;
+  margin-top: -150px;
   position: absolute;
   text-align: center;
   top: 50%;
